replace api response with ResponseStatusExeption

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.continue-on-error=true
 
 # Logging
 logging.level.minicode=debug
+
+#ResponseStatusExcption
+server.error.include-stacktrace=never
