rearange and maven wrapper

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.datasource.continue-on-error=true
 # Logging
 logging.level.minicode=debug
 
-#ResponseStatusExcption
+#ResponseStatusException
 server.error.include-stacktrace=never
